--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   cached_network_image: ^3.3.0
+  webview_flutter: ^4.4.2
 
 
 dev_dependencies:
