--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   http: ^1.1.0
   cached_network_image: ^3.3.0
   webview_flutter: ^4.4.2
+  provider: ^6.1.2
+  intl: ^0.19.0
+  shimmer: ^3.0.0
+  connectivity_plus: ^5.0.2
+  firebase_core: ^2.24.2
+  cloud_firestore: ^4.14.0
 
 
 dev_dependencies:
