--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   connectivity_plus: ^5.0.2
   firebase_core: ^2.24.2
   cloud_firestore: ^4.14.0
+  flutter_bloc: ^8.1.5
 
 
 dev_dependencies:
